; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_objres.c_vlc_objres_remove.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_objres.c_vlc_objres_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_res = type { i8*, %struct.vlc_res*, i32 (i8*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_objres_remove(i32* %0, i8* %1, i32 (i8*, i8*)* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32 (i8*, i8*)*, align 8
  %7 = alloca %struct.vlc_res**, align 8
  %8 = alloca %struct.vlc_res*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 (i8*, i8*)* %2, i32 (i8*, i8*)** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call %struct.vlc_res** @vlc_obj_res(i32* %9)
  store %struct.vlc_res** %10, %struct.vlc_res*** %7, align 8
  br label %11

11:                                               ; preds = %39, %3
  %12 = load %struct.vlc_res**, %struct.vlc_res*** %7, align 8
  %13 = load %struct.vlc_res*, %struct.vlc_res** %12, align 8
  store %struct.vlc_res* %13, %struct.vlc_res** %8, align 8
  %14 = load %struct.vlc_res*, %struct.vlc_res** %8, align 8
  %15 = icmp ne %struct.vlc_res* %14, null
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %6, align 8
  %19 = load %struct.vlc_res*, %struct.vlc_res** %8, align 8
  %20 = getelementptr inbounds %struct.vlc_res, %struct.vlc_res* %19, i32 0, i32 0
  %21 = load i8*, i8** %20, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 %18(i8* %21, i8* %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %39

25:                                               ; preds = %11
  %26 = load %struct.vlc_res*, %struct.vlc_res** %8, align 8
  %27 = getelementptr inbounds %struct.vlc_res, %struct.vlc_res* %26, i32 0, i32 1
  %28 = load %struct.vlc_res*, %struct.vlc_res** %27, align 8
  %29 = load %struct.vlc_res**, %struct.vlc_res*** %7, align 8
  store %struct.vlc_res* %28, %struct.vlc_res** %29, align 8
  %30 = load %struct.vlc_res*, %struct.vlc_res** %8, align 8
  %31 = getelementptr inbounds %struct.vlc_res, %struct.vlc_res* %30, i32 0, i32 2
  %32 = load i32 (i8*)*, i32 (i8*)** %31, align 8
  %33 = load %struct.vlc_res*, %struct.vlc_res** %8, align 8
  %34 = getelementptr inbounds %struct.vlc_res, %struct.vlc_res* %33, i32 0, i32 0
  %35 = load i8*, i8** %34, align 8
  %36 = call i32 %32(i8* %35)
  %37 = load %struct.vlc_res*, %struct.vlc_res** %8, align 8
  %38 = call i32 @free(%struct.vlc_res* %37)
  ret void

39:                                               ; preds = %11
  %40 = load %struct.vlc_res*, %struct.vlc_res** %8, align 8
  %41 = getelementptr inbounds %struct.vlc_res, %struct.vlc_res* %40, i32 0, i32 1
  store %struct.vlc_res** %41, %struct.vlc_res*** %7, align 8
  br label %11
}

declare dso_local %struct.vlc_res** @vlc_obj_res(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @free(%struct.vlc_res*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
